# stellarfund-master

./: .gitignore  .vercelignore  README.md  eslint.config.mjs  instrumentation-client.ts  instrumentation.ts  package-lock.json  package.json  vercel.json  vitest.config.ts
.github/workflows/: ci.yml
contracts/campaign/: Cargo.toml
contracts/factory/: Cargo.toml
contracts/reputation/: Cargo.toml
contracts/reputation/src/: lib.rs  test.rs
contracts/reputation/test_snapshots/test/: records_and_reads_score.1.json  rejects_unregistered_campaign.1.json  unknown_creator_is_zero.1.json
docs/: DEPLOY_NOTES.md  GROWTH-REPORT.md  LEVEL4-IDEA-SUBMISSION.md  SECURITY.md  SUBMISSION-L6.md  SUBMISSION-L7.md  SUBMISSION.md  demo-captions.srt
docs/feedback/: README.md  responses.sample.csv
public/: sw.js
public/demo/: stellar-crowdfund-demo.webm
scripts/: deploy-mainnet.sh  deploy.sh  record-demo.mjs  seed.sh
src/: store.ts
src/app/: layout.tsx  page.tsx  robots.ts  sitemap.test.ts  sitemap.ts
src/components/: CampaignCard.tsx  CampaignDetail.tsx  CampaignUpdates.tsx  Comments.tsx  ConnectTracker.tsx  CreateForm.tsx  FeedbackForm.tsx  FirstRunHint.tsx  FollowButton.tsx  MiniBars.tsx  NavMenu.tsx  OnboardingTour.tsx  PWARegister.tsx  PageTracker.tsx  PollProvider.tsx  ReputationBadge.tsx  ShareBar.tsx  SiteFooter.tsx  Subscribe.tsx  TransparencyBadges.tsx  TxStatus.tsx  WalletBar.tsx  WalletRestore.tsx
src/i18n/: messages.ts
src/lib/: analytics.test.ts  analytics.ts  brevo.ts  campaign.ts  (+29 more)
tests/: CampaignCard.test.tsx  format.test.ts  metadata.test.ts
(+37 files in other folders)
